--- a/index.html
+++ b/index.html
@@ -11,10 +11,31 @@
 
   <body>
     <div class="container">
-      <table class="table table-responsive ">
+      <table class="table table-bordered table-hover" summary="Six things to meditate on daily">
+        <caption>Six Things To Meditate On</caption>
         <thead>
-          <caption>Six Things To Meditate On</caption>
+          <tr>
+            <th>Count</th>
+            <th>Things</th>
+            <th rowspan="2">Notes</th>
+            <th rowspan="2">Scripture Verses</th>
+          </tr>
         </thead>
+
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>True Things</td>
+            <td>All that is in harmony with eternal truth in creation and revelation</td>
+            <td>
+              2 Timothy 2:15Amplified Bible (AMP)<br/>
+              15 Study and do your best to present yourself to God approved, a workman [tested by trial] who has no reason to be ashamed, accurately handling and skillfully teaching the word of truth.<br/><br/>
+              2 Timothy 3:16-17Amplified Bible (AMP)<br/>
+              16 All Scripture is God-breathed [given by divine inspiration] and is profitable for instruction, for conviction [of sin], for correction [of error and restoration to obedience], for training in righteousness [learning to live in conformity to God’s will, both publicly and privately—behaving honorably with personal integrity and moral courage];<br/>
+              17 so that the [a]man of God may be complete and proficient, outfitted and thoroughly equipped for every good work.
+            </td>
+          </tr>
+        </tbody>
 
       </table>
     </div>
