make more modifications to webpage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,40 @@
               17 so that the [a]man of God may be complete and proficient, outfitted and thoroughly equipped for every good work.
             </td>
           </tr>
+          <tr>
+            <td>2</td>
+            <td>Honest Things</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Just Things</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Pure Things</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Lovely Things</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>Things of Good Report</td>
+            <td></td>
+            <td></td>
+          </tr>
         </tbody>
+
+        <tfoot>
+        </tfoot>
 
       </table>
     </div>
