add css to heading and content also more text and some placement and spacing edits

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <table class="table table-bordered table-hover" summary="Six things to meditate on daily">
         <caption>Six Things To Meditate On</caption>
         <thead>
@@ -28,24 +28,34 @@
             <td>True Things</td>
             <td>All that is in harmony with eternal truth in creation and revelation</td>
             <td>
-              2 Timothy 2:15Amplified Bible (AMP)<br/>
+              2 Timothy 2:15 Amplified Bible (AMP)<br/>
               15 Study and do your best to present yourself to God approved, a workman [tested by trial] who has no reason to be ashamed, accurately handling and skillfully teaching the word of truth.<br/><br/>
               2 Timothy 3:16-17Amplified Bible (AMP)<br/>
               16 All Scripture is God-breathed [given by divine inspiration] and is profitable for instruction, for conviction [of sin], for correction [of error and restoration to obedience], for training in righteousness [learning to live in conformity to God’s will, both publicly and privately—behaving honorably with personal integrity and moral courage];<br/>
-              17 so that the [a]man of God may be complete and proficient, outfitted and thoroughly equipped for every good work.
+              17 so that the man of God may be complete and proficient, outfitted and thoroughly equipped for every good work.
             </td>
           </tr>
           <tr>
             <td>2</td>
             <td>Honest Things</td>
-            <td></td>
-            <td></td>
+            <td>All that is grave, decent, honorable, and Christian. <i>Gr.semnos
+            sem-nos' - venerable, that is, honorable: - grave, honest.</i></td>
+            <td>1 Timothy 3:8, 11 Amplified Bible (AMP)<br/>
+            8 Deacons likewise must be men worthy of respect [honorable, financially ethical, of good character], not double-tongued [speakers of half-truths], not addicted to wine, not greedy for dishonest gain,<br>
+            11 Women must likewise be worthy of respect, not malicious gossips, but self-controlled, [thoroughly] trustworthy in all things.<br/><br/>
+            Titus 2:2Amplified Bible (AMP)<br/>
+            2 Older men are to be temperate, dignified, sensible, sound in faith, in love, in steadfastness [Christlike in character].
+            </td>
           </tr>
           <tr>
             <td>3</td>
             <td>Just Things</td>
-            <td></td>
-            <td></td>
+            <td>All that is in harmony with justice and righteousness. dik'-ah-yos -
+            equitable (in character or act); by implication innocent, holy (absolutely or relatively): - just, meet, right (-eous).</td>
+            <td>Romans 3:24-31 Amplified Bible (AMP)<br/>
+            24 and are being justified [declared free of the guilt of sin, made acceptable to God, and granted eternal life] as a gift by His [precious, undeserved] [a]grace, through the redemption [the payment for our sin] which is [provided] in Christ Jesus, <br/>25 whom God displayed publicly [before the eyes of the world] as a [life-giving] [b]sacrifice of atonement and reconciliation (propitiation) by His blood [to be received] through faith. This was to demonstrate His righteousness [which demands punishment for sin], because in His forbearance [His deliberate restraint] He passed over the sins previously committed [before Jesus’ crucifixion]. <br/>26 It was to demonstrate His righteousness at the present time, so that He would be just and the One who justifies those who have faith in Jesus [and rely confidently on Him as Savior].<br/>
+            27 Then what becomes of [our] boasting? It is excluded [entirely ruled out, banished]. On what principle? On [the principle of good] works? No, but on the principle of faith. <br/>28 For we maintain that an individual is justified by faith distinctly apart from works of the Law [the observance of which has nothing to do with justification, that is, being declared free of the guilt of sin and made acceptable to God]. <br/>29 Or is God the God of Jews only? Is He not also the God of Gentiles [who were not given the Law]? Yes, of Gentiles also, <br/>30 since indeed it is one [and the same] God who will justify the circumcised by faith [which began with Abraham] and the uncircumcised through [their newly acquired] faith.
+            <br/>31 Do we then nullify the Law by this faith [making the Law of no effect, overthrowing it]? Certainly not! On the contrary, we confirm and establish and uphold the Law [since it convicts us all of sin, pointing to the need for salvation].</td>
           </tr>
           <tr>
             <td>4</td>
