add more text and minor inline html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <tr>
             <td>1</td>
             <td>True Things</td>
-            <td>All that is in harmony with eternal truth in creation and revelation</td>
+            <td>All that is in harmony with eternal truth in creation and revelation. <i>Gr al-ay-thace' true (as not concealing): - true, truly, truth.</i></td>
             <td>
               2 Timothy 2:15 Amplified Bible (AMP)<br/>
               15 Study and do your best to present yourself to God approved, a workman [tested by trial] who has no reason to be ashamed, accurately handling and skillfully teaching the word of truth.<br/><br/>
@@ -50,18 +50,33 @@
           <tr>
             <td>3</td>
             <td>Just Things</td>
-            <td>All that is in harmony with justice and righteousness. dik'-ah-yos -
-            equitable (in character or act); by implication innocent, holy (absolutely or relatively): - just, meet, right (-eous).</td>
+            <td>All that is in harmony with justice and righteousness. <i>Gr dikaios dik'-ah-yos -
+            equitable (in character or act); by implication innocent, holy (absolutely or relatively): - just, meet, right (-eous).</i></td>
             <td>Romans 3:24-31 Amplified Bible (AMP)<br/>
             24 and are being justified [declared free of the guilt of sin, made acceptable to God, and granted eternal life] as a gift by His [precious, undeserved] [a]grace, through the redemption [the payment for our sin] which is [provided] in Christ Jesus, <br/>25 whom God displayed publicly [before the eyes of the world] as a [life-giving] [b]sacrifice of atonement and reconciliation (propitiation) by His blood [to be received] through faith. This was to demonstrate His righteousness [which demands punishment for sin], because in His forbearance [His deliberate restraint] He passed over the sins previously committed [before Jesus’ crucifixion]. <br/>26 It was to demonstrate His righteousness at the present time, so that He would be just and the One who justifies those who have faith in Jesus [and rely confidently on Him as Savior].<br/>
             27 Then what becomes of [our] boasting? It is excluded [entirely ruled out, banished]. On what principle? On [the principle of good] works? No, but on the principle of faith. <br/>28 For we maintain that an individual is justified by faith distinctly apart from works of the Law [the observance of which has nothing to do with justification, that is, being declared free of the guilt of sin and made acceptable to God]. <br/>29 Or is God the God of Jews only? Is He not also the God of Gentiles [who were not given the Law]? Yes, of Gentiles also, <br/>30 since indeed it is one [and the same] God who will justify the circumcised by faith [which began with Abraham] and the uncircumcised through [their newly acquired] faith.
-            <br/>31 Do we then nullify the Law by this faith [making the Law of no effect, overthrowing it]? Certainly not! On the contrary, we confirm and establish and uphold the Law [since it convicts us all of sin, pointing to the need for salvation].</td>
+            <br/>31 Do we then nullify the Law by this faith [making the Law of no effect, overthrowing it]? Certainly not! On the contrary, we confirm and establish and uphold the Law [since it convicts us all of sin, pointing to the need for salvation].<br/><br/>
+            Romans 8:4Amplified Bible (AMP)<br/>
+            4 so that the [righteous and just] requirement of the Law might be fulfilled in us who do not live our lives in the ways of the flesh [guided by worldliness and our sinful nature], but [live our lives] in the ways of the Spirit [guided by His power].<br/><br/>
+            2 Peter 1:4-10Amplified Bible (AMP)<br/>
+            4 For by these He has bestowed on us His precious and magnificent promises [of inexpressible value], so that by them you may escape from the immoral freedom that is in the world because of disreputable desire, and become sharers of the divine nature. <br/>5 For this very reason, applying your diligence [to the divine promises, make every effort] in [exercising] your faith to, [a]develop moral excellence, and in moral excellence, knowledge (insight, understanding), <br/>6 and in your knowledge, self-control, and in your self-control, steadfastness, and in your steadfastness, godliness, <br/>7 and in your godliness, brotherly affection, and in your brotherly affection, [develop Christian] love [that is, learn to unselfishly seek the best for others and to do things for their benefit]. <br/>8 For as these qualities are yours and are increasing [in you as you grow toward spiritual maturity], they will keep you from being useless and unproductive in regard to the true knowledge and greater understanding of our Lord Jesus Christ. <br/>9 For whoever lacks these qualities is blind—shortsighted [closing his spiritual eyes to the truth], having become oblivious to the fact that he was cleansed from his old sins. <br/>10 Therefore, believers, be all the more diligent to make certain about His calling and choosing you [be sure that your behavior reflects and confirms your relationship with God]; for by doing these things [actively developing these virtues], you will never stumble [in your spiritual growth and will live a life that leads others away from sin];
+          </td>
           </tr>
           <tr>
             <td>4</td>
             <td>Pure Things</td>
-            <td></td>
-            <td></td>
+            <td>All That is chaste and holy for body and soul. <i>Gr hagnos
+            hag-nos' properly clean, that is, (figuratively) innocent, modest, perfect: - chaste, clean, pure.
+            </td>
+            <td>Romans 12:1-2 Amplified Bible (AMP)<br/>
+            Dedicated Service<br/>
+            1 Therefore I urge you, [b]brothers and sisters, by the mercies of God, to present your bodies [dedicating all of yourselves, set apart] as a living sacrifice, holy and well-pleasing to God, which is your rational (logical, intelligent) act of worship. <br/>2 And do not be conformed to this world [any longer with its superficial values and customs], but be [c]transformed and progressively changed [as you mature spiritually] by the renewing of your mind [focusing on godly values and ethical attitudes], so that you may prove [for yourselves] what the will of God is, that which is good and acceptable and perfect [in His plan and purpose for you].<br/><br/>
+            1 Corinthians 3:16-17 Amplified Bible (AMP)<br/>
+            16 [a]Do you not know and understand that you [the church] are the temple of God, and that the Spirit of God dwells [permanently] in you [collectively and individually]? <br/>17 If anyone destroys the temple of God [corrupting it with false doctrine], God will destroy the destroyer; for the temple of God is holy (sacred), and that is what you are.<br/><br/>
+            2 Corinthians 7:1 Amplified Bible (AMP)<br/>
+            Paul Reveals His Heart<br/>
+            7 Therefore, since we have these [great and wonderful] promises, beloved, let us cleanse ourselves from everything that contaminates body and spirit, completing holiness [living a consecrated life—a life set apart for God’s purpose] in the fear of God.
+            </td>
           </tr>
           <tr>
             <td>5</td>
