add more text content to webpage

--- a/index.html
+++ b/index.html
@@ -81,14 +81,26 @@
           <tr>
             <td>5</td>
             <td>Lovely Things</td>
-            <td></td>
-            <td></td>
+            <td>All that is pleasing and tends to bless others. <i>Gr prosphilēs pros-fee-lace' friendly towards, that is, acceptable: - lovely.</i>
+            </td>
+            <td>1 Corinthians 13:4-8 Amplified Bible (AMP)<br/>
+            4 Love endures with patience and serenity, love is kind and thoughtful, and is not jealous or envious; love does not brag and is not proud or arrogant. <br/>5 It is not rude; it is not self-seeking, it is not provoked [nor overly sensitive and easily angered]; it does not take into account a wrong endured. <br/>6 It does not rejoice at injustice, but rejoices with the truth [when right and truth prevail]. <br/>7 Love bears all things [regardless of what comes], believes all things [looking for the best in each one], hopes all things [remaining steadfast during difficult times], endures all things [without weakening].<br/>
+            8 Love never fails [it never fades nor ends]. But as for prophecies, they will pass away; as for tongues, they will cease; as for the gift of special knowledge, it will pass away.<br/><br/>
+            Galatians 5:22-23Amplified Bible (AMP)<br>
+            22 But the fruit of the Spirit [the result of His presence within us] is love [unselfish concern for others], joy, [inner] peace, patience [not the ability to wait, but how we act while waiting], kindness, goodness, faithfulness, 23 gentleness, self-control. Against such things there is no law.
+            </td>
           </tr>
           <tr>
             <td>6</td>
             <td>Things of Good Report</td>
-            <td></td>
-            <td></td>
+            <td>All that is in harmony with the best public good, virtuous and praise worthy. <i>Gr euphēmos yoo'-fay-mos well spoken of, that is, reputable: - of good report.</i>
+            </td>
+            <td>Romans 13:1-10Amplified Bible (AMP)<br/>
+            Be Subject to Government<br/>
+            1 Let every person be subject to the governing authorities. For there is no authority except from God [granted by His permission and sanction], and those which exist have been put in place by God.<br/> 2 Therefore whoever [a]resists [governmental] authority resists the ordinance of God. And those who have resisted it will bring judgment (civil penalty) on themselves. <br/>3 For [civil] authorities are not a source of fear for [people of] good behavior, but for [those who do] evil. Do you want to be unafraid of authority? Do what is good and you will receive approval and commendation. <br/>4 For he is God’s servant to you for good. But if you do wrong, [you should] be afraid; for he does not carry the [executioner’s] sword for nothing. He is God’s servant, an avenger who brings punishment on the wrongdoer. <br/>5 Therefore one must be subject [to civil authorities], not only to escape the punishment [that comes with wrongdoing], but also as a matter of principle [knowing what is right before God]. <br/>6 For this same reason you pay taxes, for civil authorities are God’s servants, devoting themselves to governance. <br/>7 Pay to all what is due: tax to whom tax is due, customs to whom customs, respect to whom respect, honor to whom honor.<br/>
+            8 Owe nothing to anyone except to [c]love and seek the best for one another; for he who [unselfishly] loves his neighbor has fulfilled the [essence of the] law [relating to one’s fellowman]. <br/>9 The commandments, “You shall not commit adultery, you shall not murder, you shall not steal, you shall not covet,” and any other commandment are summed up in this statement: “You shall love your neighbor as yourself.” <br/>10 Love does no wrong to a neighbor [it never hurts anyone]. Therefore [unselfish] love is the fulfillment of the Law.<br/><br/>
+            2 Peter 4:1-10 (above)
+            </td>
           </tr>
         </tbody>
 
