add css to webpage and img

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <tr>
             <th>Count</th>
             <th>Things</th>
-            <th rowspan="2">Notes</th>
-            <th rowspan="2">Scripture Verses</th>
+            <th>Notes</th>
+            <th>Scripture Verses</th>
           </tr>
         </thead>
 
@@ -105,6 +105,9 @@
         </tbody>
 
         <tfoot>
+          <td colspan="4">
+          Content taken from <a href="http://www.dake.com/" target="_blank">The Dake Annotated Reference Bible King James Version Red Letter Edition</a>. Greek meanings in Notes section taken from <a href="http://www.e-sword.net/" target="_blank">eSword</a> app.
+          </td>
         </tfoot>
 
       </table>
